Included Text Images

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,10 @@
                         <a class="nav-link navbar-text" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbar-text" href="#">Convert Image</a>
+                        <a class="nav-link navbar-text" href="{% url 'index' %}">Convert Image</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbar-text" href="{% url 'secondPage' %}">Create Text</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link navbar-text" href="#">Contact Us</a>
